# electrical-impedance-tomography

./: .dockerignore  Dockerfile  README.md  TCC_DANIEL.rar  acoes-feitas-para-rodar.txt  hello.py  pyproject.toml
TCC_DANIEL/Prog/: Cord.csv  Jn.csv  Multi_matr.py  Show_img.py  Vobj.csv  Vobj1.csv  Vobj3.csv  aplication.py
TCC_DANIEL/Prog/DataCSV/: Vobj2.csv  v_ref.csv
TCC_DANIEL/Prog/EIT/: AppTie.py  AppTie.ui  Comunica.py  WindowsEIT.py  WindowsEIT.ui  comunicaSPI.py  eit.py  spidev.py
TCC_DANIEL/SPI_TEST/: SPI_TEST.ino  convert.ino  dadosSpi.py  eit.cpp  eit.h  func.ino  keywords.txt
